customer-edit-touch-and-go :)

--- a/src/app/pages/customer-edit/customer-edit.component.html
+++ b/src/app/pages/customer-edit/customer-edit.component.html
@@ -16,33 +16,33 @@
               <label for="">FirstName</label>
               <input name="first_name" type="text" [(ngModel)]="customer.first_name" class="form-control "
                 pattern=".{2,}" [class.error]="eventForm.controls.first_name?.invalid &&
-                !eventForm.controls.first_name?.pristine" [class.success]="eventForm.controls.first_name?.valid &&
-                !eventForm.controls.first_name?.pristine" required>
-              <span [hidden]="eventForm.controls.first_name?.valid || eventForm.controls.first_name?.pristine"
+                eventForm.controls.first_name?.touched" [class.success]="eventForm.controls.first_name?.valid &&
+                eventForm.controls.first_name?.touched" required>
+              <span [hidden]="eventForm.controls.first_name?.valid || !eventForm.controls.first_name?.touched"
                 class="error">The FirstName is required and must be at least 2 characters long.</span>
-              <span [hidden]="eventForm.controls.first_name?.invalid || eventForm.controls.first_name?.pristine"
+              <span [hidden]="eventForm.controls.first_name?.invalid || !eventForm.controls.first_name?.touched"
                 class="success">Success</span>
             </div>
             <div class="col-md-3 my-md-0 my-2">
               <label for="">LastName</label>
               <input name="last_name" type="text" [(ngModel)]="customer.last_name" class="form-control success"
                 pattern=".{2,}" [class.error]="eventForm.controls.last_name?.invalid &&
-                !eventForm.controls.last_name?.pristine" [class.success]="eventForm.controls.last_name?.valid &&
-                !eventForm.controls.last_name?.pristine" required>
-              <span [hidden]="eventForm.controls.last_name?.valid || eventForm.controls.last_name?.pristine"
+                eventForm.controls.last_name?.touched" [class.success]="eventForm.controls.last_name?.valid &&
+                eventForm.controls.last_name?.touched" required>
+              <span [hidden]="eventForm.controls.last_name?.valid || !eventForm.controls.last_name?.touched"
                 class="error">The LastName is required and must be at least 2 characters long.</span>
-              <span [hidden]="eventForm.controls.last_name?.invalid || eventForm.controls.last_name?.pristine"
+              <span [hidden]="eventForm.controls.last_name?.invalid || !eventForm.controls.last_name?.touched"
                 class="success">Success</span>
             </div>
             <div class="col-md-6 my-md-0 my-2">
               <label for="">Email</label>
               <input name="email" type="text" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
                 [(ngModel)]="customer.email" class="form-control" [class.error]="eventForm.controls.email?.invalid
-                && !eventForm.controls.email?.pristine"
-                [class.success]="eventForm.controls.email?.valid && !eventForm.controls.email?.pristine" required>
-              <span [hidden]="eventForm.controls.email?.valid || eventForm.controls.email?.pristine" class="error">The
+                && eventForm.controls.email?.touched"
+                [class.success]="eventForm.controls.email?.valid && eventForm.controls.email?.touched" required>
+              <span [hidden]="eventForm.controls.email?.valid || !eventForm.controls.email?.touched" class="error">The
                 Email is required and valid. ( example@gmail.com )</span>
-              <span [hidden]="eventForm.controls.email?.invalid || eventForm.controls.email?.pristine"
+              <span [hidden]="eventForm.controls.email?.invalid || !eventForm.controls.email?.touched"
                 class="success">Success</span>
             </div>
           </div>
@@ -54,43 +54,43 @@
               <label for="">Country</label>
               <input name="country" type="text" [(ngModel)]="customer.address.country" class="form-control"
                 pattern=".{5,}" [class.error]="eventForm.controls.country?.invalid &&
-                !eventForm.controls.country?.pristine" [class.success]="eventForm.controls.country?.valid &&
-                !eventForm.controls.country?.pristine" required>
-              <span [hidden]="eventForm.controls.country?.valid || eventForm.controls.country?.pristine"
+                eventForm.controls.country?.touched" [class.success]="eventForm.controls.country?.valid &&
+                eventForm.controls.country?.touched" required>
+              <span [hidden]="eventForm.controls.country?.valid || !eventForm.controls.country?.touched"
                 class="error">The Country is required and must be at least 5 characters long.</span>
-              <span [hidden]="eventForm.controls.country?.invalid || eventForm.controls.country?.pristine"
+              <span [hidden]="eventForm.controls.country?.invalid || !eventForm.controls.country?.touched"
                 class="success">Success</span>
             </div>
             <div class="col-md-3 my-md-0 my-2">
               <label for="">City</label>
               <input name="city" type="text" [(ngModel)]="customer.address.city" class="form-control" pattern=".{5,}"
                 [class.error]="eventForm.controls.city?.invalid &&
-                !eventForm.controls.city?.pristine" [class.success]="eventForm.controls.city?.valid &&
-                !eventForm.controls.city?.pristine" required>
-              <span [hidden]="eventForm.controls.city?.valid || eventForm.controls.city?.pristine" class="error">The
+                eventForm.controls.city?.touched" [class.success]="eventForm.controls.city?.valid &&
+                eventForm.controls.city?.touched" required>
+              <span [hidden]="eventForm.controls.city?.valid || !eventForm.controls.city?.touched" class="error">The
                 City is required and must be at least 5 characters long.</span>
-              <span [hidden]="eventForm.controls.city?.invalid || eventForm.controls.city?.pristine"
+              <span [hidden]="eventForm.controls.city?.invalid || !eventForm.controls.city?.touched"
                 class="success">Success</span>
             </div>
             <div class="col-md-2 my-md-0 my-2">
               <label for="">Zip</label>
               <input name="zip" type="text" [(ngModel)]="customer.address.zip" class="form-control" [class.error]="eventForm.controls.zip?.invalid &&
-                !eventForm.controls.zip?.pristine" [class.success]="eventForm.controls.zip?.valid &&
-                !eventForm.controls.zip?.pristine" required>
-              <span [hidden]="eventForm.controls.zip?.valid || eventForm.controls.zip?.pristine" class="error">The
+                eventForm.controls.zip?.touched" [class.success]="eventForm.controls.zip?.valid &&
+                eventForm.controls.zip?.touched" required>
+              <span [hidden]="eventForm.controls.zip?.valid || !eventForm.controls.zip?.touched" class="error">The
                 City Zip required.</span>
-              <span [hidden]="eventForm.controls.zip?.invalid || eventForm.controls.zip?.pristine"
+              <span [hidden]="eventForm.controls.zip?.invalid || !eventForm.controls.zip?.touched"
                 class="success">Success</span>
             </div>
             <div class="col-md-4 my-md-0 my-2">
               <label for="">Street</label>
               <input name="street" type="text" [(ngModel)]="customer.address.street" pattern=".{5,}"
                 class="form-control" [class.error]="eventForm.controls.street?.invalid &&
-                !eventForm.controls.street?.pristine" [class.success]="eventForm.controls.street?.valid &&
-                !eventForm.controls.street?.pristine" required>
-              <span [hidden]="eventForm.controls.street?.valid || eventForm.controls.street?.pristine" class="error">The
+                eventForm.controls.street?.touched" [class.success]="eventForm.controls.street?.valid &&
+                eventForm.controls.street?.touched" required>
+              <span [hidden]="eventForm.controls.street?.valid || !eventForm.controls.street?.touched" class="error">The
                 City is required and must be at least 5 characters long.</span>
-              <span [hidden]="eventForm.controls.street?.invalid || eventForm.controls.street?.pristine"
+              <span [hidden]="eventForm.controls.street?.invalid || !eventForm.controls.street?.touched"
                 class="success">Street</span>
             </div>
           </div>
@@ -99,11 +99,11 @@
               <label for="">Notes</label>
               <input name="notes" type="text" [(ngModel)]="customer.address.notes" class="form-control"
                 pattern=".{5,100}" [class.error]="eventForm.controls.notes?.invalid &&
-                !eventForm.controls.notes?.pristine" [class.success]="eventForm.controls.notes?.valid &&
-                !eventForm.controls.notes?.pristine" required>
-              <span [hidden]="eventForm.controls.notes?.valid || eventForm.controls.notes?.pristine" class="error">The
+                eventForm.controls.notes?.touched" [class.success]="eventForm.controls.notes?.valid &&
+                eventForm.controls.notes?.touched" required>
+              <span [hidden]="eventForm.controls.notes?.valid || !eventForm.controls.notes?.touched" class="error">The
                 Notes is required and must be at least 5 characters long.</span>
-              <span [hidden]="eventForm.controls.notes?.invalid || eventForm.controls.notes?.pristine"
+              <span [hidden]="eventForm.controls.notes?.invalid || !eventForm.controls.notes?.touched"
                 class="success">Street</span>
             </div>
           </div>
@@ -112,13 +112,13 @@
             <div class="col-12">
               <h4 class="h4__label">Customer status</h4>
               <div class="col-6" *ngIf="customer.active === true">
-                <input name="active" type="checkbox" [(ngModel)]="customer.active" class="mx-2" required>
+                <input name="active" type="checkbox" [(ngModel)]="customer.active" class="mx-2">
                 <label class="status" for=""><strong>Active</strong> Customer</label>
 
               </div>
               <div class="col-6" *ngIf="customer.active === false">
                 <input *ngIf="customer.active === false" name="inactive" type="checkbox" [(ngModel)]="customer.active"
-                  class="mx-2" required>
+                  class="mx-2">
                 <label class="status" for=""><strong>Inactive</strong> Customer</label>
               </div>
             </div>
