--- a/src/app/pages/order-edit/order-edit.component.html
+++ b/src/app/pages/order-edit/order-edit.component.html
@@ -4,34 +4,47 @@
     <div class="card">
       <div class="card-header card-header-primary d-flex justify-content-between">
         <div>
-          <h3 class="card-title ">Edit Order</h3>
+          <h3 *ngIf="order.id === 0">Create new Order</h3>
+          <h3 *ngIf="order.id !== 0">#{{ order.id }} Order</h3>
+          <!-- <h3 class="card-title ">Edit Order</h3> -->
         </div>
       </div>
       <div class="card-body">
-        <form #orderForm="ngForm"  (ngSubmit)="onUpdate(orderForm, order)" class="py-3 px-5">
-          <div class="mt-3">
+        <form #orderForm="ngForm" (ngSubmit)="onUpdate(orderForm, order)" class="py-3 px-5">
+          <!-- <div class="mt-3">
             <label for="">OrderID</label>
             <input name="orderID" [(ngModel)]="order.id" type="text" class="form-control" disabled>
-          </div>
+          </div> -->
           <div class="mt-4">
             <label for="">CustomerID</label>
             <input name="customerID" [(ngModel)]="order.customerID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
-            <div [hidden]="orderForm.controls.customerID?.valid" class="error-message">
-              Please add a customerID.
-            </div>
+            <div [style.opacity]="orderForm.controls.customerID?.value  || 
+                !orderForm.controls.customerID?.touched ? '0' : '1' || orderForm.controls.customerID?.valid" [style.visibility]="orderForm.controls.customerID?.value || 
+                !orderForm.controls.customerID?.touched ? 'hidden' : 'visible' || orderForm.controls.customerID?.valid" class="error-message">
+              Customer ID is required and must contain numbers.
+            </div>         
           </div>
           <div class="mt-4">
             <label for="">ProductID</label>
             <input name="productID" [(ngModel)]="order.productID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
-            <div [hidden]="orderForm.controls.productID?.valid" class="error-message">
-              Please add a productID.
+            <div [style.opacity]="orderForm.controls.productID?.value  || 
+                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
+                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
+                Product ID is required and must contain numbers.
             </div>
           </div>
           <div class="mt-4">
             <label for="">Amount</label>
-            <input name="amount" [(ngModel)]="order.amount" type="text" class="form-control" required>
-            <div [hidden]="orderForm.controls.amount?.valid" class="error-message">
-              Amount is required.
+            <div class="input-group">
+            <input name="amount" [(ngModel)]="order.amount" type="text" class="form-control" pattern="^[1-9]{2,5}$" required>
+            <div class="input-group-append">
+              <span class="input-group-text">Ft</span>
+            </div>
+          </div>
+            <div [style.opacity]="orderForm.controls.productID?.value  || 
+                !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
+                !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
+              Amount is required and must contain numbers.
             </div>
           </div>
           <div class="mt-4">
