--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,72 +1,80 @@
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-header card-header-warning card-header-icon">
-                  <div class="card-icon">
-                    <i class="material-icons">content_copy</i>
-                  </div>
-                  <p class="card-category">Used Space</p>
-                  <h3 class="card-title">49/50
-                    <small>GB</small>
-                  </h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <i class="material-icons text-danger">warning</i>
-                    <a href="#">Get More Space...</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-header card-header-success card-header-icon">
-                  <div class="card-icon">
-                    <i class="material-icons">store</i>
-                  </div>
-                  <p class="card-category">Revenue</p>
-                  <h3 class="card-title">$34,245</h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <i class="material-icons">date_range</i> Last 24 Hours
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-header card-header-danger card-header-icon">
-                  <div class="card-icon">
-                    <i class="material-icons">info_outline</i>
-                  </div>
-                  <p class="card-category">Fixed Issues</p>
-                  <h3 class="card-title">75</h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <i class="material-icons">local_offer</i> Tracked from Github
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-              <div class="card card-stats">
-                <div class="card-header card-header-info card-header-icon">
-                  <div class="card-icon">
-                    <i class="fa fa-twitter"></i>
-                  </div>
-                  <p class="card-category">Followers</p>
-                  <h3 class="card-title">+245</h3>
-                </div>
-                <div class="card-footer">
-                  <div class="stats">
-                    <i class="material-icons">update</i> Just Updated
-                  </div>
-                </div>
-              </div>
-            </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-xl-3 col-md-6 col-sm-6 pr-0">
+      <div class="card card-stats dash-card">
+        <div class="card-header card-header-warning card-header-icon">
+          <div class="card-icon">
+            <i class="material-icons">theaters</i>
           </div>
-
+          <p class="card-category">Active Products</p>
         </div>
+        <div class="card-body">
+          <h3 class="card-title">{{ activeProductsCount }}/{{ productsCount }}</h3>
+        </div>
+        <div class="card-footer pt-auto">
+          <div class="stats">
+            <i class="material-icons text-danger">error</i>
+            <p>{{activeProductsPercent}} of the Products are active</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 col-sm-6 pr-0">
+      <div class="card card-stats dash-card">
+        <div class="card-header card-header-success card-header-icon">
+          <div class="card-icon">
+            <i class="material-icons">person</i>
+          </div>
+          <p class="card-category">Active Customers</p>
+        </div>
+        <div class="card-body">
+          <h3 class="card-title">{{ activeCustomersCount }}/{{ customersCount }}</h3>
+        </div>
+        <div class="card-footer pt-auto">
+          <div class="stats">
+            <i class="material-icons text-warning">warning</i>
+            <p>{{activeCustomersPercent}} of the Customers are active</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 col-sm-6 pr-0">
+      <div class="card card-stats dash-card">
+        <div class="card-header card-header-danger card-header-icon">
+          <div class="card-icon">
+            <i class="material-icons">shopping_cart</i>
+          </div>
+          <p class="card-category">Unpaid Orders</p>
+        </div>
+        <div class="card-body">
+          <h3 class="card-title">{{ unpaidOrdersCount }}/{{ ordersCount }}</h3>
+        </div>
+        <div class="card-footer pt-auto">
+          <div class="stats">
+            <i class="material-icons text-info">report</i>
+            <p>{{unpaidOrdersPercent}} of the Orders are unpaid</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-3 col-md-6 col-sm-6">
+      <div class="card card-stats dash-card">
+        <div class="card-header card-header-info card-header-icon">
+          <div class="card-icon">
+            <i class="material-icons">paid</i>
+          </div>
+          <p class="card-category">Unpaid Bills</p>
+        </div>
+        <div class="card-body">
+          <h3 class="card-title">{{ unpaidBillsValue }} Ft</h3>
+        </div>
+        <div class="card-footer pt-auto">
+          <div class="stats">
+            <i class="material-icons text-primary">paid</i>
+            <p>{{unpaidBillsValuePercent}} of the value is unpaid</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
