--- a/src/app/pages/order-edit/order-edit.component.scss
+++ b/src/app/pages/order-edit/order-edit.component.scss
@@ -1,6 +1,15 @@
+@keyframes error {
+    0%   {opacity: 0%;}
+    25%  {opacity: 25%;}
+    50%  {opacity: 50%;}
+    100% {opacity: 100%;}
+}
+
 .error-message {
     color: rgb(226, 62, 62);
-    transition: all 1 ease;
+    opacity: 100%;
+    animation-name: error;
+    animation-duration: .5s;
 }
 
 .btn-block:disabled{
