order typeahead problem fixed

--- a/src/app/pages/order-edit/order-edit.component.html
+++ b/src/app/pages/order-edit/order-edit.component.html
@@ -37,7 +37,7 @@
           </div>
           <div class="mt-4">
             <label for="">ProductID</label>
-            <input name="productID" [(ngModel)]="order.productID" type="text" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
+            <input name="productID" [(ngModel)]="order.productID" type="number" class="form-control" pattern="^[1-9]{1}[0-9]{0,2}$" required>
             <div [style.opacity]="orderForm.controls.productID?.value  || 
                 !orderForm.controls.productID?.touched ? '0' : '1'" [style.visibility]="orderForm.controls.productID?.value || 
                 !orderForm.controls.productID?.touched ? 'hidden' : 'visible'" class="error-message">
@@ -47,7 +47,7 @@
           <div class="mt-4">
             <label for="">Amount</label>
             <div class="input-group">
-            <input name="amount" [(ngModel)]="order.amount" type="text" class="form-control" pattern="^[1-9]{2,5}$" required>
+            <input name="amount" [(ngModel)]="order.amount" type="number" class="form-control" pattern="^[1-9]{2,5}$" required>
             <div class="input-group-append">
               <span class="input-group-text">Ft</span>
             </div>
