new-bill page added

--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <!-- Create a new bill -->
-    <button class="btn btn-success w-100" [routerLink]="'0'">Add new Bill
+    <button class="btn btn-success w-100" [routerLink]="'/newbill'">Add new Bill
       <i class="material-icons align-text-center pl-3">article</i>
     </button>
     <!-- Bill list (modify status: new to paid, delete: no) -->
