id-generator service added

--- a/src/app/pages/new-bill/new-bill.component.html
+++ b/src/app/pages/new-bill/new-bill.component.html
@@ -12,7 +12,7 @@
         <div class="card-body">
           <h1>Next unique ID is:</h1>
           <img src="http://bevik.uw.hu/show-paper.jpg">
-          <h2 style="position: relative; top: -100px; left: 135px;">XXX</h2>
+          <h2 style="position: relative; top: -100px; left: 130px;">#{{ nextID }}</h2>
           <!-- <form #orderForm="ngForm" (ngSubmit)="onUpdate(orderForm, order)" class="py-3 px-5">
             <div class="mt-3">
               <label for="">OrderID</label>
