--- a/src/app/pages/new-bill/new-bill.component.html
+++ b/src/app/pages/new-bill/new-bill.component.html
@@ -10,6 +10,7 @@
           </div> -->
         </div>
         <div class="card-body">
+          <button class="btn btn-info" (click)="setId()">Get new Bill ID</button>
           <h1>Next unique ID is:</h1>
           <img src="http://bevik.uw.hu/show-paper.jpg">
           <h2 style="position: relative; top: -100px; left: 130px;">#{{ nextID }}</h2>
